--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,16 @@ body {
   background-color: #fff;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
 a {
   text-decoration: none;
 }
@@ -15,6 +25,51 @@ a:hover {
 ul,
 ol {
   list-style-type: none;
+  margin: 0;
+  padding-left: 0;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+.container {
+  max-width: 1158px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
+.page-header {
+  border-bottom: 1px solid #e7e9fc;
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+}
+
+.header-nav {
+  display: flex;
+  align-items: center;
+}
+
+.nav-list {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+
+.contacts-list {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+
+.header-logo {
+  padding: 24px 0px;
+  margin-right: 76px;
 }
 
 .logo {
@@ -50,6 +105,7 @@ ol {
 }
 
 .address-contacts {
+  margin-left: auto;
   font-style: normal;
 }
 .nav-item {
@@ -59,11 +115,9 @@ ol {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  display: block;
+  padding: 24px 0px;
 }
-
-/* .nav-item:hover {
-  color: #404bbf;
-} */
 
 .nav-contacts {
   font-family: inherit;
@@ -71,12 +125,18 @@ ol {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  display: block;
+  padding: 24px 0px;
 }
 
 .nav-item:hover,
 .nav-contacts:hover,
 .nav-contacts:focus {
   color: #404bbf;
+}
+
+.section-title-container {
+  width: auto;
 }
 
 .page-title {
@@ -87,6 +147,18 @@ ol {
   text-align: center;
   color: #fff;
   background-color: #2e2f42;
+  width: 496px;
+  margin: 0 auto;
+  justify-content: center;
+}
+
+.button-wrapper {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: row;
+  margin-top: 48px;
+  gap: 10px;
 }
 
 .button {
@@ -98,6 +170,10 @@ ol {
   color: #fff;
   background-color: #4d5ae5;
   cursor: pointer;
+  border-radius: 4px;
+  padding: 16px 32px;
+  min-width: 169px;
+  min-height: 56px;
 }
 
 .subtitle {
@@ -112,8 +188,12 @@ ol {
 .subtitle-team,
 .subtitle-portfolio {
   text-transform: capitalize;
+  min-width: 218px;
+  margin: 0px auto;
+  margin-bottom: 72px;
 }
 
+.principles-subtitle,
 .subtitle-item {
   font-family: inherit;
   font-weight: 500;
@@ -121,6 +201,13 @@ ol {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+}
+
+.principles-subtitle {
+  margin-bottom: 8px;
+}
+.principles-item {
+  width: 264px;
 }
 
 .subtitle-text {
@@ -133,24 +220,103 @@ ol {
 
 .section-title {
   background-color: #2e2f42;
+  padding-top: 188px;
+  padding-bottom: 188px;
 }
 
 .section-principles {
+  padding: 120px 0px;
   background-color: inherit;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.principles-list {
+  display: flex;
+  justify-content: center;
+  gap: 8px;
 }
 
 .section-team {
   background-color: #f4f4fd;
+  padding: 120px 0px;
+}
+
+.subtitle-team {
+  min-width: 162px;
+  margin: 0px auto;
+  margin-bottom: 72px;
+}
+.team-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
 }
 
 .card-color {
   background-color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 8px;
+  border-radius: 0 0 4px 4px;
+  padding: 0px 0px 32px 0px;
 }
 
-.footer-background {
+.section-portfolio {
+  padding: 120px 0px;
+}
+
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+}
+
+.portfolio.item {
+  width: calc((100% - 48px) / 3);
+}
+
+.portfolio-card {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  border-bottom: 1px solid #e7e9fc;
+  border-left: 1px solid #e7e9fc;
+  border-right: 1px solid #e7e9fc;
+
+  gap: 8px;
+  padding: 32px 16px;
+}
+
+.footer {
   background-color: #2e2f42;
+  padding: 100px 0px;
+}
+
+/* .footer-all {
+  display: inline-block;
+} */
+
+.footer-logo {
+  display: inline-block;
+  margin-bottom: 16px;
 }
 
 .footer-subtitle-text {
   color: #f4f4fd;
+  width: 264px;
 }
