--- a/css/styles.css
+++ b/css/styles.css
@@ -147,18 +147,9 @@ img {
   text-align: center;
   color: #fff;
   background-color: #2e2f42;
-  width: 496px;
+  max-width: 496px;
   margin: 0 auto;
   justify-content: center;
-}
-
-.button-wrapper {
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
-  flex-direction: row;
-  margin-top: 48px;
-  gap: 10px;
 }
 
 .button {
@@ -170,10 +161,17 @@ img {
   color: #fff;
   background-color: #4d5ae5;
   cursor: pointer;
+  border: none;
   border-radius: 4px;
   padding: 16px 32px;
   min-width: 169px;
-  min-height: 56px;
+  height: 56px;
+  display: block;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: row;
+  margin: 48px auto 0px;
+  gap: 10px;
 }
 
 .subtitle {
@@ -260,7 +258,7 @@ img {
 }
 .team-list {
   display: flex;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   gap: 24px;
 }
 
@@ -281,7 +279,7 @@ img {
 
 .portfolio-list {
   display: flex;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   gap: 24px;
 }
 
