--- a/css/styles.css
+++ b/css/styles.css
@@ -188,7 +188,7 @@ img {
   text-transform: capitalize;
   min-width: 218px;
   margin: 0px auto;
-  margin-bottom: 72px;
+  margin-bottom: 8px;
 }
 
 .principles-subtitle,
@@ -243,7 +243,7 @@ img {
 .principles-list {
   display: flex;
   justify-content: center;
-  gap: 8px;
+  gap: 24px;
 }
 
 .section-team {
@@ -260,6 +260,10 @@ img {
   display: flex;
   /* flex-wrap: wrap; */
   gap: 24px;
+}
+
+.card-team-name {
+  padding: 32px 0px;
 }
 
 .card-color {
@@ -279,16 +283,18 @@ img {
 
 .portfolio-list {
   display: flex;
-  /* flex-wrap: wrap; */
-  gap: 24px;
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 48px;
 }
 
-.portfolio.item {
+.portfolio-item {
   width: calc((100% - 48px) / 3);
 }
 
 .portfolio-card {
   display: flex;
+  flex-wrap: wrap;
   align-items: flex-start;
   justify-content: center;
   flex-direction: column;
@@ -304,10 +310,6 @@ img {
   background-color: #2e2f42;
   padding: 100px 0px;
 }
-
-/* .footer-all {
-  display: inline-block;
-} */
 
 .footer-logo {
   display: inline-block;
