--- a/css/styles.css
+++ b/css/styles.css
@@ -188,7 +188,7 @@ img {
   text-transform: capitalize;
   min-width: 218px;
   margin: 0px auto;
-  margin-bottom: 8px;
+  margin-bottom: 72px;
 }
 
 .principles-subtitle,
@@ -199,11 +199,9 @@ img {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
-}
-
-.principles-subtitle {
   margin-bottom: 8px;
 }
+
 .principles-item {
   width: 264px;
 }
@@ -214,6 +212,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  text-align: center;
 }
 
 .section-title {
@@ -262,7 +261,7 @@ img {
   gap: 24px;
 }
 
-.card-team-name {
+.card-team {
   padding: 32px 0px;
 }
 
@@ -274,7 +273,7 @@ img {
   flex-direction: column;
   gap: 8px;
   border-radius: 0 0 4px 4px;
-  padding: 0px 0px 32px 0px;
+  /* padding: 0px 0px 32px 0px; */
 }
 
 .section-portfolio {
