--- a/css/styles.css
+++ b/css/styles.css
@@ -191,14 +191,13 @@ img {
   margin-bottom: 72px;
 }
 
-.principles-subtitle,
-.subtitle-item {
+.principles-subtitle {
   font-family: inherit;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  text-align: center;
+  text-align: left;
   color: #2e2f42;
   margin-bottom: 8px;
 }
@@ -207,13 +206,13 @@ img {
   width: 264px;
 }
 
-.subtitle-text {
+.principles-text {
   font-family: inherit;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
-  text-align: center;
+  text-align: left;
 }
 
 .section-title {
@@ -258,21 +257,20 @@ img {
 }
 .team-list {
   display: flex;
-  /* flex-wrap: wrap; */
+  flex-wrap: wrap;
   gap: 24px;
 }
 
-.card-team {
+.team-card {
   padding: 32px 0px;
 }
 
-.card-color {
+.team-item {
   background-color: #fff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  gap: 8px;
+  /* align-items: center;
+  justify-content: center; */
+  /* flex-direction: column; */
+  gap: 24px;
   border-radius: 0px 0px 4px 4px;
 }
 
@@ -287,24 +285,44 @@ img {
   row-gap: 48px;
 }
 
-.portfolio-item {
+/* .portfolio-item {
   width: calc((100% - 48px) / 3);
-}
+} */
 
 .portfolio-card {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: flex-start;
+  /* align-items: flex-start;
   justify-content: center;
-  flex-direction: column;
+  flex-direction: column; */
   border-bottom: 1px solid #e7e9fc;
   border-left: 1px solid #e7e9fc;
   border-right: 1px solid #e7e9fc;
 
-  gap: 8px;
+  gap: 24px;
   padding: 32px 16px;
 }
 
+.portfolio-subtitle,
+.team-subtitle {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  margin-bottom: 8px;
+}
+
+.portfolio-text,
+.team-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+
+.text-center {
+  text-align: center;
+}
 .footer {
   background-color: #2e2f42;
   padding: 100px 0px;
@@ -315,7 +333,12 @@ img {
   margin-bottom: 16px;
 }
 
-.footer-subtitle-text {
+.footer-text {
   color: #f4f4fd;
   width: 264px;
+  text-align: left;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
 }
